Endpoints améliorés et documentés
